opensecrets_restapis sector rest api works. Now we need a few changes for running batch 1, 2, or 3 on demand.