@@ -1,6 +1,5 @@
 package co.inajar.oursponsors.controllers.opensecrets;
 
-import co.inajar.oursponsors.models.opensecrets.sector.OpenSecretsSector;
 import co.inajar.oursponsors.models.opensecrets.sector.SectorResponse;
 import co.inajar.oursponsors.services.opensecrets.CandidatesApiManager;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,14 +26,11 @@ public class AdminOpensecretsController {
     public ResponseEntity<List<SectorResponse>> downloadSectors() {
         // NOTE: this will be a hack for now that accepts 1, 2, or 3 for the part of our download
         // as opensecrets.org only allows 200 downloads per day.
-        var response = new ArrayList<SectorResponse>();
         var httpStatus = HttpStatus.OK;
         var sectorResponses = candidatesApiManager.getSectorsListResponse();
-        System.out.println(sectorResponses);
-//        var list = candidatesApiManager.mapOpenSecretsResponseToSectors(sectorResponses).parallelStream()
-//                .map(SectorResponse::new)
-//                .collect(Collectors.toList());
-//        response.addAll(list);
+        var response = candidatesApiManager.mapOpenSecretsResponseToSectors(sectorResponses).stream()
+                .map(SectorResponse::new)
+                .toList();
         candidatesApiManager.mapOpenSecretsResponseToSectors(sectorResponses);
         return new ResponseEntity<>(response, httpStatus);
     }
